--- a/main.html
+++ b/main.html
@@ -3,11 +3,21 @@
 <html>
 
 <head>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<button id="button-1" type="button" class="btn btn-primary">Button 1</button>
+	<button id="button-2" type="button" class="btn btn-light btn-outline-secondary">Button 1</button>
+	<button id="button-3" type="button" class="btn btn-success btn-lg">Button 1</button>
+	<button id="button-4" type="button" class="btn btn-danger btn-sm">Button 1</button>
+	<button id="button-5" type="button" class="btn btn-warning w-100">Button 1</button>
+	<button id="button-6" type="button" class="btn btn-info">Button 1</button>
+	<button id="button-7" type="button" class="btn btn-light">Button 1</button>
+<!-- 	<button type="button" class="btn btn-dark">Dark</button> -->
+	<button id="button-8" type="button" class="btn btn-link">Button 1</button>
     <script type="text/javascript" src="./script.js">
 </script>
 
