--- a/main.html
+++ b/main.html
@@ -10,10 +10,10 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<button id="button-1" type="button" class="btn btn-primary">Button 1</button>
-	<button id="button-2" type="button" class="btn btn-light btn-outline-secondary">Button 1</button>
+	<button id="button-2" type="button" class="btn btn-outline-secondary">Button 1</button>
 	<button id="button-3" type="button" class="btn btn-success btn-lg">Button 1</button>
 	<button id="button-4" type="button" class="btn btn-danger btn-sm">Button 1</button>
-	<button id="button-5" type="button" class="btn btn-warning w-100">Button 1</button>
+	<button id="button-5" type="button" class="btn btn-warning btn-lg btn-block">Button 1</button>
 	<button id="button-6" type="button" class="btn btn-info">Button 1</button>
 	<button id="button-7" type="button" class="btn btn-light">Button 1</button>
 <!-- 	<button type="button" class="btn btn-dark">Dark</button> -->
