--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 	<button id="button-3" type="button" class="btn btn-success btn-lg">Button 1</button>
 	<button id="button-4" type="button" class="btn btn-danger btn-sm">Button 1</button>
 	<button id="button-5" type="button" class="btn btn-warning btn-lg btn-block">Button 1</button>
-	<button id="button-6" type="button" class="btn btn-info">Button 1</button>
+	<button id="button-6" type="button" class="btn btn-info disabled">Button 1</button>
 	<button id="button-7" type="button" class="btn btn-light">Button 1</button>
 <!-- 	<button type="button" class="btn btn-dark">Dark</button> -->
 	<button id="button-8" type="button" class="btn btn-link">Button 1</button>
